# GlassBoxAI-CNN

./: Cargo.toml  KANI_TESTS.md  README.md  index.d.ts  index.js  package.json  pyproject.toml
csharp/: FacadedCnnCuda.cs
go/: cnn.go  cnn_test.go  go.mod
gui/: build.rs
gui/src/: cnn.rs  cxx_qt_bridge.rs  kani_tests.rs  main.rs
include/: facaded_cnn_cuda.h  facaded_cnn_cuda.hpp
julia/: Project.toml
julia/src/: FacadedCNNCUDA.jl
python/facaded_cnn_cuda/: __init__.py  __init__.pyi
src/: capi.rs  cnn.rs  kani_tests.rs  lib.rs  main.rs  nodejs.rs  opencl.rs  python.rs
src/kani/: bounds_checks.rs  constant_time.rs  deadlock_free.rs  division_by_zero.rs  enum_exhaustion.rs  ffi_c_boundary.rs  ffi_cuda_boundary.rs  ffi_opencl_boundary.rs  ffi_polyglot.rs  floating_point.rs  input_sanitization.rs  integer_overflow.rs  memory_leaks.rs  mod.rs  no_panic.rs  pointer_validity.rs  resource_limits.rs  result_coverage.rs  state_consistency.rs  state_machine.rs
zig/: build.zig  facaded_cnn_cuda.zig
