[package]
name = "facaded_cnn_cuda"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Abbott"]
license = "MIT"
description = "Convolutional Neural Network implementation using cudarc"

[lib]
name = "facaded_cnn_cuda"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "facaded_cnn_cuda"
path = "src/main.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[features]
default = []
python = ["pyo3"]
nodejs = ["napi", "napi-derive"]
capi = []

[dependencies]
cudarc = { version = "0.12", features = ["cuda-12060"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
napi = { version = "2", default-features = false, features = ["napi6", "serde-json"], optional = true }
napi-derive = { version = "2", optional = true }

[dev-dependencies]
# Kani is invoked via `cargo kani`, not as a regular dependency
# See: https://model-checking.github.io/kani/install-guide.html

# For running Kani proofs:
# cargo install --locked kani-verifier
# cargo kani
