[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "facaded_cnn_cuda"
version = "0.1.0"
description = "CUDA-accelerated Convolutional Neural Network library"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Matthew Abbott" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"

[project.optional-dependencies]
numpy = ["numpy>=1.20"]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "facaded_cnn_cuda"
